packages/pkgcraft/pkgcraft-0.0.11.tar.gz/pkgcraft-0.0.11/testdata/repos/valid/bad/eapi/unsupported/unsupported-1.ebuild
EAPI=1
DESCRIPTION="ebuild with unsupported EAPI"
SLOT=0
